[tool.poetry]
name = "dicebot"
version = "0.1.0"
description = ""
authors = ["volodymyrb <volodymyrb@fornova.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
